tests/parser/fail/super-class-field.som
"test:
failMessage:
  - contains: define
  - contains: super
"

SuperClassField = (
  ----

  |a b c super d e f|

  run = (42)
)
